--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "heroku-postbuild": "yarn install && yarn build"
   },
   "engines": {
-    "node": "10.16.0"
+    "node": "10.16.0", 
+    "yarn": "1.16.0"
   },
   "proxy": "http://localhost:8000",
   "eslintConfig": {
