--- a/package.json
+++ b/package.json
@@ -17,11 +17,10 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "heroku-postbuild": "yarn install && yarn build"
+    "heroku-postbuild": "npm install && npm run build"
   },
   "engines": {
-    "node": "10.16.0", 
-    "yarn": "1.16.0"
+    "node": "10.16.0"
   },
   "proxy": "http://localhost:8000",
   "eslintConfig": {
