--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "react-scripts": "3.2.0"
   },
   "scripts": {
-    "start": "cd server && node server.js",
+    "start": "node server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "heroku-postbuild": "npm install && npm start"
+    "heroku-postbuild": "npm install && npm run build"
   },
   "engines": {
     "node": "10.16.0"
